--- a/views/home.html
+++ b/views/home.html
@@ -52,8 +52,7 @@
 			4. A Hyperlink to the Buffs official home page [ https://cubuffs.com/ ]
 			5. At least 1 Bootstrap class to modify your content
 		-->
-		<img class="chip-img" src="/Users/nickhans/Desktop/School/SoftwareDev/Lab/lab_4/resources/img/chip.jpeg"
-			alt="Chip!">
+		<img class="chip-img" src="../resources/img/chip.jpeg" alt="Chip!">
 		<p class="home-para">This website has stats for the CU Buffs football team. <br><a href="https://cubuffs.com/">Click
 				here for visit
 				the official Buffs site</a></p>
