--- a/views/player_info.html
+++ b/views/player_info.html
@@ -62,11 +62,9 @@
 					|  Rushing Yards: 378  |  Avg. Rushing Yards: 12  |
 					|  Receiving Yards: 57 |  Avg. Receiving Yards: 2 |
 				-->
-				<h1>Player Information</h1>
+				<h1 class="player-info-header">Player Information</h1>
 				<div class="card" id="#player1">
-					<img class="card-img-top"
-						src="/Users/nickhans/Desktop/School/SoftwareDev/Lab/lab_4/resources/img/SP29FBCCU_0928_hc_1275.jpg"
-						alt="An Image of Player 1">
+					<img class="card-img-top" src="../resources/img/players.jpg" alt="An Image of Player 1">
 					<div class="card-body">
 						<div class="Dropdown">
 							<button class="btn btn-secondary Dropdown-toggle" type="button" id="dropdownMenuButton"
