--- a/views/team_stats.html
+++ b/views/team_stats.html
@@ -48,27 +48,51 @@
 				3. A second table listing the Win/Loss ratio for the season
 		-->
 		<div class="JumboTron">
-			<h1 class="display-1" style="text-align: center">Fall 2018 Season</h1>
+			<h1 class="display-4" style="text-align: center">Fall 2018 Season</h1>
 
 			<table>
 				<tr>
-					<th>Colorado State</th>
-					<th>Nebraska</th>
-					<th>New Hampshire</th>
+					<th rowspan="2">Game Date</th>
+					<th rowspan="2">Opposing Team Name</th>
+					<th colspan="2">Score</th>
+					<th rowspan="2">Winner</th>
 				</tr>
 				<tr>
-					<td>W</td>
-					<td>W</td>
-					<td>W</td>
+					<th>Home Score</th>
+					<th>Opp. Score</th>
+				</tr>
+				<tr>
+					<td>Aug. 31, 2018</td>
+					<td>Colorado State</td>
+					<td>45</td>
+					<td>13</td>
+					<td>CU Buffs</td>
+				</tr>
+				<tr>
+					<td>Sept. 8, 2018</td>
+					<td>Nebraska</td>
+					<td>33</td>
+					<td>28</td>
+					<td>CU Buffs</td>
+				</tr>
+				<tr>
+					<td>Sept. 15, 2018</td>
+					<td>New Hampshire</td>
+					<td>45</td>
+					<td>14</td>
+					<td>CU Buffs</td>
 				</tr>
 			</table>
 
-			<table style="margin-top: 10px">
+			<table style="margin-top: 10px; margin-left: auto; margin-right: auto; border: 1px solid black">
+				<hr>
 				<tr>
-					<th>Win/Loss Ratio</th>
+					<th>Win</th>
+					<th>Loss</th>
 				</tr>
 				<tr>
-					<td>5-7</td>
+					<td>3</td>
+					<td>0</td>
 				</tr>
 			</table>
 		</div>
